latex/grammar.tex
\documentclass{article}
\usepackage{syntax}
\usepackage[utf8]{inputenc}

\begin{document}
\paragraph{Default settings}

\setlength{\grammarparsep}{20pt plus 1pt minus 1pt} % increase separation between rules
\setlength{\grammarindent}{12em} % increase separation between LHS/RHS 

\begin{grammar}

<S'> ::= <program>

<program> ::= <program> <unit>
\alt <unit>

<unit> ::= <t\_name> '=' <fundecl> ';'

<statement> ::= <fundecl>
\alt <vardecl>
\alt <assign\_expr>
\alt <expr>

<statement\_list> ::= <statement\_list> ';' <statement>
\alt <statement>
\alt <empty>

<vardecl> ::= <t\_var> <vdecl>

<vdecl> ::= <vdecl> ',' <assign\_expr>
\alt <vdecl> ',' <t\_name>
\alt <assign\_expr>
\alt <t\_name>

<fundecl> ::= <t\_fun> '(' <params> ')' <body>
\alt <t\_fun> '(' <empty> ')' <body>

<params> ::= <params> ',' <t\_name> | <t\_name>

<body> ::= '{' <statement\_list> ';' '}'
\alt '{' <statement\_list> '}'

<exprlist> ::= <exprlist> ',' <expr> | <expr>

<assign\_expr> ::= <t\_name> '=' <expr>

<expr> ::= <literal>
\alt <call\_expr>
\alt <expr> '-' <expr>
\alt <expr> '+' <expr>
\alt <expr> '/' <expr>
\alt <expr> '*' <expr>
\alt <expr> '\%' <expr>
\alt <expr> '\textless' <expr>
\alt <expr> '\textgreater' <expr>
\alt <expr> <eq\_op> <expr>
\alt <expr> <t\_and\_op> <expr>
\alt <expr> <t\_or\_op> <expr>
\alt '-' <expr>
\alt '(' <expr> ')'
\alt <t\_return> <expr>
\alt <if\_expr>

<if\_expr> ::= <t\_if> '(' <expr> ')' <body> <elseiflist> <t\_else> <body>
\alt <t\_if> '(' <expr> ')' <body> <elseiflist>

<elseiflist> ::= <elseiflist> <t\_elsif> '(' <expr> ')' <body>
\alt <t\_elsif> '(' <expr> ')' <body>
\alt <empty>

<call\_expr> ::= <t\_name> '(' <exprlist> ')'

<eq\_op> ::= '\textgreater' '='
\alt '\textless' '='
\alt '!' '='

<literal> ::= <t\_integer>
\alt <t\_float>
\alt <t\_string>
\alt <t\_char>
\alt <t\_false>
\alt <t\_true>
\alt <t\_null>
\alt <t\_name>

<empty> ::= <empty>

\end{grammar}

\end{document}
